# 4DGames

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StyleGuide.txt
modules/game/models/: GameObject.hpp  PhysObj.cpp  PhysObj.hpp
modules/gtest/: CMakeLists.txt
scripts/: syncSnippets.bat  syncSnippets.sh
sublime-snippets/: 4dheader-c++.sublime-snippet  4dheader-cmake.sublime-snippet  doxyfunc-c++.sublime-snippet  headerguards-c.sublime-snippet  namespace-c++.sublime-snippet  spacer.sublime-snippet
