####################################################################################
##
##     _____    ____ _       ____ _        __ _      __ _  __ _  ______ _   ___ _
##    / /| |]  |  __ \\     / ___ \\      / \ \\    |   \\/   |]|  _____|] / ___|]
##   / //| |]  | |] \ \\   | |]  \_|]    / //\ \\   | |\ / /| |]| |]___ _ ( ((_ _
##  / //_| |]_ | |]  ) ))  | |]  __ _   / _____ \\  | |]\_/ | |]|  _____|] \___ \\
## |_____   _|]| |]_/ //   | |]__/  |] / //    \ \\ | |]    | |]| |]___ _   ___) ))
##       |_|]  |_____//     \_____/|]]/_//      \_\\|_|]    |_|]|_______|] |____//
##       
##
####################################################################################
##
##
##  File    : CMakeLists.txt
##  Author  : Anthony Islas
##  Purpose : Directions for CMake to auto-generate Makefiles
##  Group   : Components
##
##  TODO    : None
##
##  License : None
##
####################################################################################

####################################################################################
#
# Automate naming of target
#
####################################################################################
get_filename_component ( TARGET_NAME ${CMAKE_CURRENT_SOURCE_DIR}/.. ABSOLUTE )
string ( REPLACE " " "_" TARGET_NAME ${TARGET_NAME}Test)
string ( REGEX MATCH "[0-9a-zA-Z]+Test" TARGET_NAME ${TARGET_NAME} )

message ( "Target Name: " ${TARGET_NAME} )


####################################################################################
#
# Code to test source
#
####################################################################################
get_test_sources ( "${TEST_INCLUDES}" HEADER_FILES SOURCE_FILES)

set ( SOURCES 
      ${HEADER_FILES}
      ${SOURCE_FILES}
      ${TEST_SOURCES}
    )
 
####################################################################################
#
# Local tests executable
#
####################################################################################
add_executable ( ${TARGET_NAME}  ${SOURCES} )

####################################################################################
#
# Add GTest includes
#
####################################################################################
target_include_directories ( ${TARGET_NAME} PUBLIC 
                             ${TEST_INCLUDES}
                             ${GTEST_ROOT}/include 
                           )
print_include_dirs ( ${TARGET_NAME} )



####################################################################################
#
# Set default main and gtest libraries
#
####################################################################################
set ( LIBS 
      ${GTEST_LIB}
      ${GTEST_LIB_MAIN}
      ${CMAKE_THREAD_LIBS_INIT}
    )


####################################################################################
#
# Local tests executable
#
####################################################################################
target_link_libraries ( ${TARGET_NAME} ${LIBS} )


message ( "Configured " ${TARGET_NAME} )
